--- a/peeker_detector.html
+++ b/peeker_detector.html
@@ -34,7 +34,7 @@
 <tr>
 <td id="breadcrumb">
 <a href="https://github.com/sophistry/peeker">Project Home</a> &nbsp;&#8250;&nbsp;
-<a href="peeker_toc.html">User Guide Home</a> &nbsp;&#8250;&nbsp;
+<a href="index.html">User Guide Home</a> &nbsp;&#8250;&nbsp;
 Detector Class
 </td>
 </td>
@@ -115,7 +115,7 @@ Detector Class
 <p>
 
 <a href="#top">Top of Page</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-<a href="peeker_toc.html">User Guide Home</a>
+<a href="index.html">User Guide Home</a>
 </p>
 <p><a href="https://github.com/sophistry/peeker">Peeker</a> &nbsp;&middot;&nbsp; Copyright &#169; 2009-20xx &nbsp;&middot;&nbsp;</p>
 </div>
