--- a/peeker.html
+++ b/peeker.html
@@ -34,7 +34,7 @@
 <tr>
 <td id="breadcrumb">
 <a href="https://github.com/sophistry/peeker">Project Home</a> &nbsp;&#8250;&nbsp;
-<a href="peeker_toc.html">User Guide Home</a> &nbsp;&#8250;&nbsp;
+<a href="index.html">User Guide Home</a> &nbsp;&#8250;&nbsp;
 Peeker Class
 </td>
 
@@ -274,7 +274,7 @@ $this->peeker->detectors_abort(TRUE);
 <p>
 
 <a href="#top">Top of Page</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-<a href="peeker_toc.html">User Guide Home</a>
+<a href="index.html">User Guide Home</a>
 </p>
 <p><a href="https://github.com/sophistry/peeker">Peeker</a> &nbsp;&middot;&nbsp; Copyright &#169; 2009-20xx &nbsp;&middot;&nbsp;</p>
 </div>
